--- a/prova/pubspec.yaml
+++ b/prova/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
 
@@ -56,6 +57,12 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  flutter_svg: ^2.0.7
+
+  assets:
+    - assets/images/fatec-matao.jpg
+    - assets/images/cst-dsm.png
+    - assets/images/cps-55-anos.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
